<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:progress="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content_backgroud_recorder">
    <com.opensource.camcorder.widget.RecorderTitlebar
        android:id="@+id/tb_recorder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.opensource.camcorder.widget.ProgressView
        android:id="@+id/pv_recorder_progress"
        android:layout_width="match_parent"
        android:layout_height="15dip"
        progress:backgroundColor="#FF000000"
        progress:splitWidth="2dp"
        progress:progress="50"
        progress:max="100"
        progress:minMask="15" />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1">
        <SurfaceView
            android:id="@+id/sv_recorder_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </FrameLayout>
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:paddingBottom="10dip" >
        <Button
            style="@style/RecorderToolbarButton"
            android:id="@+id/btn_recorder_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/selector_ic_video"
            android:text="@string/video"/>
        <Button
            style="@style/RecorderToolbarButton"
            android:id="@+id/btn_recorder_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/selector_ic_image"
            android:text="@string/image"/>

        <ToggleButton 
            style="@style/RecorderToolbarButton"
            android:id="@+id/tbtn_recorder_delay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/selector_ic_delay"
            android:textColor="@color/rbtn_text_color_gray_red"
            android:textOn="@string/delay"
            android:textOff="@string/delay"/>
        <ToggleButton 
            style="@style/RecorderToolbarButton"
            android:id="@+id/tbtn_recorder_focus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/selector_ic_focus"
            android:textColor="@color/rbtn_text_color_gray_red"
            android:textOn="@string/focus"
            android:textOff="@string/focus"/>
        <Button
            style="@style/RecorderToolbarButton"
            android:id="@+id/btn_recorder_delete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/selector_ic_delete"
            android:text="@string/delete_back"/>
    </LinearLayout>
</LinearLayout>

<!--
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content_backgroud_recorder" >

    <RelativeLayout
        android:id="@+id/recorder_flashlight_parent"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#222222" >

        <TextView
            android:id="@+id/txtTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp" />

        <Button
            android:id="@+id/recorder_flashlight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="112dp"
            android:background="@drawable/btn_recorder_flashlight"
            android:visibility="gone" />

        <Button
            android:id="@+id/recorder_frontcamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="112dp"
            android:layout_toLeftOf="@id/recorder_flashlight"
            android:background="@drawable/btn_recorder_frontcamera"
            android:visibility="gone" />
    </RelativeLayout>

    <com.opensource.magiccamcorder.ProgressView
        android:id="@+id/recorder_progress"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_below="@id/recorder_flashlight_parent" />

    <RelativeLayout
        android:id="@+id/recorder_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#222222"
        android:paddingBottom="20dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="20dp" >

        <Button
            android:id="@+id/recorder_cancel"
            android:layout_width="66dp"
            android:layout_height="36dp"
            android:background="@drawable/btn_recorder_cancel"
            android:text="取消"
            android:textColor="#bbbbbb"
            android:textSize="14dp" />

        <Button
            android:id="@+id/recorder_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_toRightOf="@id/recorder_cancel"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/btn_recorder_video"
            android:text="视频"
            android:textColor="@drawable/btn_recorder_video_text"
            android:textSize="12dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/recorder_next"
            android:layout_width="66dp"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_recorder_next"
            android:enabled="false"
            android:text="下一步"
            android:textColor="#444444"
            android:textSize="14dp" />

        <Button
            android:id="@+id/recorder_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="40dp"
            android:layout_toLeftOf="@id/recorder_next"
            android:background="@android:color/transparent"
            android:drawablePadding="10dp"
            android:drawableTop="@drawable/btn_recorder_picture"
            android:text="照片"
            android:textColor="@drawable/btn_recorder_video_text"
            android:textSize="12dp"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/recorder_surface_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/recorder_bottom"
        android:layout_below="@id/recorder_progress" >

        <SurfaceView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/recorder_surface_state"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/recorder_progress"
        android:background="#7f000000"
        android:clickable="false"
        android:focusable="false"
        android:scaleType="center" />

</RelativeLayout>-->
